--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,11 +1,17 @@
 <!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+        "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+        "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
   <filter-mapping>
     <filter-name>corsfilter</filter-name>
     <url-pattern>/*</url-pattern>
+  </filter-mapping>
+   <filter-mapping>
+    <filter-name>authenticationfilter</filter-name>
+    <url-pattern>/userNotes</url-pattern>
+    <url-pattern>/userInfo</url-pattern>
+    <url-pattern>/createNotes</url-pattern>
   </filter-mapping>
 </web-app>
