--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,17 +5,26 @@
 <web-app>
 <request-character-encoding>UTF-8</request-character-encoding>
   <display-name>Archetype Created Web Application</display-name>
-  <filter-mapping>
-    <filter-name>corsfilter</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
-   <filter-mapping>
+    <filter-mapping>
+        <filter-name>corsfilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
     <filter-name>authenticationfilter</filter-name>
-    <url-pattern>/userNotes</url-pattern>
-    <url-pattern>/userInfo</url-pattern>
-    <url-pattern>/createNotes</url-pattern>
-    <url-pattern>/viewNote</url-pattern>
-  </filter-mapping>
+        <url-pattern>/userNotes</url-pattern>
+        <url-pattern>/userInfo</url-pattern>
+        <url-pattern>/createNotes</url-pattern>
+        <url-pattern>/viewNote</url-pattern>
+        <url-pattern>/updateNote</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>generatecsrftokenfilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>checkcrsftokenfilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
   <filter-mapping>
     <filter-name>logoutfilter</filter-name>
     <url-pattern>/*</url-pattern>
